@@ -5,6 +5,14 @@ Docking
  - Added close button to the caption of docked windows
  - Added save/restore dock layout to docking sample
  - Added Close all dockables and Default Dock layout to docking sample
+
+
+Notepad sample
+ - Now capable of handling Unicode text
+ 
+
+All Changes
+-----------
 Added CWnd::GetZOrder
 Added CToolbar::SetButtonWidth (useful for adding a ComboBox to a toolbar)
 Added TRACE output to display error in the event of an exception.
